--- a/src/components/Forms/addCategoryForm/AddCategoryForm.module.sass
+++ b/src/components/Forms/addCategoryForm/AddCategoryForm.module.sass
@@ -3,6 +3,9 @@
 .block 
     width: 326px
 
+.title
+    font-size: 24px
+    font-weight: 800
 
 .button_add_cat
     width: 162px
@@ -30,15 +33,7 @@
     border: none
     margin: 0
     transition: background-color 0.2s
-
-.input_file[data-theme='blue']
-
-    background-color: #54b8cd
-
-
-.input_file[data-theme='green']
-
-    background-color: #4CAF05
+    background-color: #FEA832
 
 
 .input_file input[type=file]
@@ -88,3 +83,14 @@
 .button-delete:hover 
     background-color: #4995aa
     border: 2px solid #4995aa
+
+.button
+    width: 120px
+    font-family: inherit
+    font-size: 1.1rem
+    font-weight: 400
+    color: #212529
+    margin-top: 20px
+    line-height: 1.5
+    height: 40px
+    margin-right:10px
