--- a/src/screens/CategoryListScreen/CategoryListScreen.module.sass
+++ b/src/screens/CategoryListScreen/CategoryListScreen.module.sass
@@ -1,22 +1,8 @@
 .main
   text-align: center
 
-.product-image__img
-  border: 0
-  padding: 6px
-  background: none
-  outline: none
-  cursor: pointer
-  position: absolute
-  right: 230px
-  top: 60px
-
-.plus
-  content: ""
-  display: inline-block
-  width: 17px
-  height: 18px
-  position: absolute
-  left: 0px
-  top: 30px
-  background: url('src/images/plus.svg') 0 0 no-repeat
+.add
+  display: block
+  marginRight: 50px
+  width: 40px
+  height: 40px
