--- a/src/screens/OperationListScreen/OperationListScreen.module.sass
+++ b/src/screens/OperationListScreen/OperationListScreen.module.sass
@@ -4,16 +4,8 @@
 .form_box
   display: flex
   align-items: flex-start
-  //justify-content: center
-
 
 .product-image__img
-  //max-width: 100%
-  //max-height: 100%
-  //height: auto
-  //display: block
-  //margin-left: auto
-  //margin-right: 50px
   border: 0
   padding: 6px
   background: none
@@ -22,3 +14,9 @@
   position: absolute
   right: 230px
   top: 60px
+
+.add
+  display: block
+  marginRight: 50px
+  width: 40px
+  height: 40px
