--- a/src/components/Category/Category.module.sass
+++ b/src/components/Category/Category.module.sass
@@ -21,3 +21,9 @@
   justify-content: space-between
   align-items: flex-end
 
+.itemImage
+  width: 60px
+  height: 60px
+  border-radius: 8px
+  margin-right: 16px
+  object-fit: cover
