--- a/src/components/Forms/addOperationForm/AddOperationForm.module.sass
+++ b/src/components/Forms/addOperationForm/AddOperationForm.module.sass
@@ -1,24 +1,27 @@
-.filter_form 
+
+.text_field
     margin-bottom: 1rem
-    width: 350px
 
-
-
-.label 
+.text_field__label
     font-size: 1.25rem
     display: block
+    margin-top: 1rem
+
+.text_field__file-name
+    font-size: 1.25rem
     margin-top: 1rem
 
 .error_label
     display: block
     margin-bottom: 0.25rem
+    margin-left: 1rem
     color: red
 
-.select 
+.text_field__input
     display: block
-    width: 320px
-    height: 2rem
-    padding: 0.3rem 0.75rem
+    width: 300px
+    height: 2.5rem
+    padding: 0.375rem 0.75rem
     font-family: inherit
     font-size: 1.25rem
     font-weight: 400
@@ -29,8 +32,15 @@
     background-clip: padding-box
     border: 1px solid #bdbdbd
     border-radius: 0.25rem
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
 
-.button_send
+.text_field__input11
+    font-size: 1rem
+
+.block
+    width: 326px
+
+.button
     width: 120px
     font-family: inherit
     font-size: 1.1rem
@@ -39,3 +49,8 @@
     margin-top: 20px
     line-height: 1.5
     height: 40px
+    margin-right:10px
+
+.title
+    font-size: 24px
+    font-weight: 800
